--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Latiahan Git</title>
 </head>
 <body>
+    <header>Disini adalah header</header>
+
     <h1>PT Hasna Mart</h1>
 
     <div>Lorem ipsum dolor sit amet</div>
 
+    <footer>Disini Adalah Footer okeee</footer>
 </body>
 </html>
